# tiangong-lca-worker

./: .env.example  AGENTS.md  Cargo.toml  README.md
.docpact/: config.yaml
.github/workflows/: ai-doc-lint.yml
crates/solver-worker/: Cargo.toml
crates/solver-worker/src/: calculation_bundle.rs  calculation_evidence.rs  compiled_graph.rs  config.rs  contribution_path.rs  db.rs  db_pool.rs  lib.rs  local_reports.rs  main.rs  package_db.rs  package_execution.rs  pgbouncer_sqlx.rs  queue.rs  readiness.rs  review_submit_gate.rs  review_submit_gate_runner.rs  scope_closure.rs  signed_flow.rs  snapshot_artifacts.rs  snapshot_index.rs  static_lcia_cache.rs  storage.rs  tidas_process_semantics.rs  types.rs
crates/solver-worker/tests/: scope_closure_package_v2_e2e.rs
crates/solver-worker/tests/fixtures/: tidas_validate_e2e_stub.py
crates/solver-worker/tests/fixtures/reference_extraction_v1/: golden.json
deploy/systemd/: snapshot-gc.service
docs/: edge-function-integration.md  frontend-integration.md  implicit-regional-supply-mix-modeling.en.md  implicit-regional-supply-mix-modeling.md  lca-api-contract.md  matrix-readiness-report-contract.md  provider-linking.md  review-submit-fast-gate-contract.md  scope-closure-contract.md  tidas-package-contract.md
docs/agents/: repo-architecture.md  repo-validation.md
scripts/: gc_lca_results.sh  gc_lca_snapshots.sh  run_scope_closure_package_v2_e2e.sh
