[workspace]
members = [
  "crates/solver-core",
  "crates/suitesparse-ffi",
  "crates/solver-worker",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
hdf5 = "0.8"
hdf5-sys = { version = "0.8", features = ["static", "zlib"] }
flate2 = "1"
fs2 = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rayon = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
approx = "0.5"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
missing_docs = "allow"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
