[package]
name = "solver-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
flate2.workspace = true
fs2.workspace = true
hdf5.workspace = true
hdf5-sys.workspace = true
hex.workspace = true
hmac.workspace = true
reqwest.workspace = true
rayon.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zip.workspace = true
solver-core = { path = "../solver-core" }

[lints]
workspace = true
